# repository-manager

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.ci.yml  docker-compose.yml
.agent/workflows/: superpowers-execute-plan-parallel.md
.audit/: 00-consolidated-summary.md  01-phase2-implementation-report.md  02-stub-audit-and-dependency-chain.md  investigator1-architecture.md  investigator2-test-quality.md  investigator3-code-quality.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: docker-integration.yml  rust.yml
.vault/audit/: 2026-02-21-health-audit-full.md  (+6 more)
crates/repo-agent/: Cargo.toml
crates/repo-agent/src/: discovery.rs  error.rs  lib.rs  process.rs  subprocess.rs  types.rs
crates/repo-blocks/: Cargo.toml
crates/repo-blocks/src/: error.rs  lib.rs  parser.rs  writer.rs
crates/repo-blocks/src/formats/: json.rs  mod.rs  toml.rs  yaml.rs
crates/repo-blocks/tests/: parser_tests.rs  writer_tests.rs
crates/repo-cli/: Cargo.toml
crates/repo-cli/src/: cli.rs  context.rs  error.rs  interactive.rs  main.rs
crates/repo-cli/src/commands/: agent.rs  branch.rs  config.rs  diff.rs  extension.rs  git.rs  governance.rs  hooks.rs  init.rs  issue.rs  list.rs  mod.rs  open.rs  plugins.rs  rule.rs  skills.rs  status.rs  superpowers.rs  sync.rs  tool.rs
crates/repo-cli/tests/: cli_e2e_tests.rs  cli_list_tools.rs  integration_tests.rs
crates/repo-content/: Cargo.toml
crates/repo-content/examples/: basic_usage.rs
crates/repo-content/src/: block.rs  diff.rs  document.rs  edit.rs  error.rs  format.rs  lib.rs  path.rs
crates/repo-content/src/handlers/: hash_comment.rs  html_comment.rs  json.rs  markdown.rs  mod.rs  plaintext.rs  toml.rs  yaml.rs
crates/repo-content/tests/: block_tests.rs  diff_integration_tests.rs  diff_tests.rs  document_tests.rs  edit_tests.rs  integration_tests.rs  json_tests.rs  lifecycle_tests.rs  markdown_tests.rs  path_tests.rs  plaintext_tests.rs  toml_tests.rs  yaml_tests.rs
crates/repo-core/: Cargo.toml
crates/repo-core/src/: error.rs  governance.rs  hooks.rs  lib.rs  mode.rs
crates/repo-core/src/backend/: mod.rs  standard.rs  worktree.rs
crates/repo-core/src/backup/: mod.rs  tool_backup.rs
crates/repo-core/src/config/: manifest.rs  mod.rs  resolver.rs  runtime.rs
crates/repo-core/src/ledger/: intent.rs  mod.rs  projection.rs
crates/repo-core/src/projection/: mod.rs  writer.rs
crates/repo-core/src/rules/: mod.rs  registry.rs  rule.rs
crates/repo-core/src/sync/: check.rs  engine.rs  mod.rs  rule_syncer.rs  tool_syncer.rs
crates/repo-core/tests/: config_tests.rs  fixture_tests.rs  integration_tests.rs  ledger_locking_tests.rs  ledger_tests.rs  mode_tests.rs  rules_tests.rs  sync_tests.rs
crates/repo-extensions/: Cargo.toml
crates/repo-extensions/src/: config.rs  dependency.rs  error.rs  installer.rs  lib.rs  lock.rs  manifest.rs  mcp.rs  registry.rs  version.rs
crates/repo-fs/: Cargo.toml
crates/repo-fs/benches/: fs_benchmarks.rs
crates/repo-fs/src/: checksum.rs  config.rs  constants.rs  error.rs  io.rs  layout.rs  lib.rs  path.rs
crates/repo-fs/tests/: .snapshot_tests.rs.pending-snap  concurrency_tests.rs  config_tests.rs  correctness_tests.rs  error_condition_tests.rs  io_tests.rs  layout_tests.rs  path_tests.rs  property_tests.proptest-regressions  property_tests.rs  robustness_tests.rs  security_audit_tests.rs  security_tests.rs  snapshot_tests.rs
crates/repo-git/: Cargo.toml
crates/repo-git/benches/: git_benchmarks.rs
crates/repo-git/src/: classic.rs  commits.rs  container.rs  error.rs  helpers.rs  in_repo_worktrees.rs  lib.rs  naming.rs  provider.rs
crates/repo-git/tests/: classic_tests.rs  container_tests.rs  git_operations_tests.rs  in_repo_worktrees_tests.rs  naming_tests.rs  robustness_unicode.rs
crates/repo-mcp/: Cargo.toml
crates/repo-mcp/src/: error.rs  handlers.rs  lib.rs  main.rs  protocol.rs  resource_handlers.rs  resources.rs  server.rs  tools.rs
crates/repo-mcp/tests/: git_and_init_tests.rs  protocol_compliance_tests.rs
crates/repo-meta/: Cargo.toml
crates/repo-meta/src/: config.rs  error.rs  lib.rs  loader.rs  registry.rs  tools.rs  validation.rs
crates/repo-meta/src/schema/: mcp.rs  mod.rs  preset.rs  rule.rs  tool.rs
crates/repo-meta/tests/: config_tests.rs  registry_tests.rs  schema_tests.rs
crates/repo-presets/: Cargo.toml
crates/repo-presets/src/: context.rs  error.rs  lib.rs  provider.rs
crates/repo-presets/src/node/: mod.rs  node_provider.rs
crates/repo-presets/src/plugins/: git.rs  mod.rs  paths.rs  provider.rs  settings.rs
crates/repo-presets/src/python/: mod.rs  uv.rs  venv.rs
crates/repo-presets/src/rust/: mod.rs  rust_provider.rs
crates/repo-presets/src/superpowers/: git.rs  mod.rs  paths.rs  provider.rs  settings.rs
crates/repo-presets/tests/: detection_tests.rs  plugins_tests.rs  python_tests.rs  superpowers_tests.rs
crates/repo-presets/tests/common/: mod.rs
crates/repo-tools/: Cargo.toml
crates/repo-tools/src/: aider.rs  amazonq.rs  antigravity.rs  claude.rs  claude_desktop.rs  cline.rs  copilot.rs  cursor.rs  dispatcher.rs  error.rs  gemini.rs  generic.rs  integration.rs  jetbrains.rs  lib.rs  logging.rs  mcp_installer.rs  mcp_registry.rs  mcp_translate.rs  roo.rs  syncer.rs  vscode.rs  windsurf.rs  zed.rs
crates/repo-tools/src/registry/: builtins.rs  mod.rs  store.rs  types.rs
crates/repo-tools/src/translator/: capability.rs  content.rs  mod.rs  rules.rs
crates/repo-tools/src/writer/: json.rs  markdown.rs  mod.rs  registry.rs  text.rs  traits.rs
crates/repo-tools/tests/: claude_tests.rs  cursor_tests.rs  dispatcher_tests.rs  format_aider_tests.rs  format_antigravity_tests.rs  format_directory_tools_tests.rs  format_markdown_tests.rs  format_vscode_tests.rs  integration_tests.rs  sync_output_tests.rs  vscode_tests.rs
docker/: .dockerignore  README.md
docs/: project-overview-prompt.md  project-overview.md
scripts/: Restore-Win11Performance.ps1  run-tool-integration-tests.sh
tests/integration/: Cargo.toml
tests/integration/src/: integration_test.rs  lib.rs  mission_tests.rs
(+342 files in other folders)
