[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/repository-manager"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Format-preserving editors
toml_edit = "0.23"

# tree-sitter
tree-sitter = "0.24"
tree-sitter-md = "0.3"

# Diffing
similar = "2.7"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
regex = "1.11"

# Error handling
thiserror = "2.0"

# Testing
insta = { version = "1.41", features = ["yaml"] }
proptest = "1.5"
tempfile = "3.14"
pretty_assertions = "1.4"
