[package]
name = "repo-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent orchestration integration for Repository Manager"

[dependencies]
repo-fs = { path = "../repo-fs" }
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
