[package]
name = "repo-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent orchestration integration for Repository Manager"

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
