[package]
name = "repo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Repository Manager"

[[bin]]
name = "repo"
path = "src/main.rs"

[dependencies]
repo-core = { path = "../repo-core" }
repo-fs = { path = "../repo-fs" }
repo-git = { path = "../repo-git" }
repo-meta = { path = "../repo-meta" }

clap = { version = "4", features = ["derive", "env"] }
colored = "2"
dialoguer = "0.11"
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2"
predicates = { workspace = true }
