[package]
name = "repo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Repository Manager"

[[bin]]
name = "repo"
path = "src/main.rs"

[dependencies]
repo-agent = { path = "../repo-agent" }
repo-core = { path = "../repo-core" }
repo-fs = { path = "../repo-fs" }
repo-git = { path = "../repo-git" }
repo-meta = { path = "../repo-meta" }
repo-tools = { path = "../repo-tools" }
repo-presets = { path = "../repo-presets" }

git2 = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "2"
dialoguer = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2"
predicates = { workspace = true }
toml.workspace = true
