[package]
name = "repo-content"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Content parsing, editing, and diffing for Repository Manager"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
similar = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
