[package]
name = "repo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core orchestration layer for Repository Manager"

[dependencies]
# Layer 0 crates
repo-fs = { path = "../repo-fs" }
repo-git = { path = "../repo-git" }
repo-meta = { path = "../repo-meta" }
repo-tools = { path = "../repo-tools" }
repo-presets = { path = "../repo-presets" }
repo-extensions = { path = "../repo-extensions" }
repo-content = { path = "../repo-content" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
fs2 = { workspace = true }
dirs = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
repo-test-utils = { path = "../repo-test-utils" }
tempfile = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
serde_yaml = { workspace = true }
