[package]
name = "repo-extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extension system for Repository Manager"

[dependencies]
repo-fs = { path = "../repo-fs" }
repo-meta = { path = "../repo-meta" }
serde = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
