[package]
name = "repo-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Filesystem abstraction for Repository Manager"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
fs2 = { workspace = true }
tempfile = { workspace = true }
dunce = { workspace = true }
thiserror = { workspace = true }
backoff = "0.4.0"
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
criterion = { workspace = true }
insta = "1.46.1"
proptest = "1.9.0"

[[bench]]
name = "fs_benchmarks"
harness = false
