[package]
name = "repo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server exposing Repository Manager functionality via Model Context Protocol"

[dependencies]
# Core repository crates
repo-core = { path = "../repo-core" }
repo-fs = { path = "../repo-fs" }
repo-git = { path = "../repo-git" }
repo-meta = { path = "../repo-meta" }
repo-tools = { path = "../repo-tools" }
repo-presets = { path = "../repo-presets" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
