[package]
name = "repo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server exposing Repository Manager functionality via Model Context Protocol"

[[bin]]
name = "repo-mcp"
path = "src/main.rs"

[dependencies]
# Core repository crates
# Note: repo-tools is not needed directly here; tool dispatch is handled via repo-core
repo-core = { path = "../repo-core" }
repo-extensions = { path = "../repo-extensions" }
repo-fs = { path = "../repo-fs" }
repo-meta = { path = "../repo-meta" }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
