[package]
name = "repo-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Metadata and configuration management for Repository Manager"

[dependencies]
repo-fs = { path = "../repo-fs" }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
