[package]
name = "repo-presets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Preset providers for Repository Manager"

[dependencies]
repo-fs = { path = "../repo-fs" }
repo-meta = { path = "../repo-meta" }
async-trait = { workspace = true }
dirs = "5.0"
git2 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
