[package]
name = "repo-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool integrations for Repository Manager"

[dependencies]
repo-fs = { path = "../repo-fs" }
repo-meta = { path = "../repo-meta" }
repo-blocks = { path = "../repo-blocks" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
insta = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
