[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
repo-fs = { path = "../../crates/repo-fs" }
repo-git = { path = "../../crates/repo-git" }
repo-core = { path = "../../crates/repo-core" }
repo-meta = { path = "../../crates/repo-meta" }
repo-presets = { path = "../../crates/repo-presets" }
repo-tools = { path = "../../crates/repo-tools" }
repo-mcp = { path = "../../crates/repo-mcp" }
git2 = { workspace = true }
assert_cmd = "2"
predicates = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
serde_json = { workspace = true }
regex = "1"

[[test]]
name = "integration_test"
path = "src/integration_test.rs"

[[test]]
name = "mission_tests"
path = "src/mission_tests.rs"
